<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigActivity"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/confText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:text="@string/configura_s"
        android:textColor="@color/branco"
        android:textSize="32sp"
        app:fontFamily="@font/orbitron_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginBottom="10sp">

        <TextView
            android:id="@+id/difText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/dificuldade"
            android:textColor="@color/branco"
            android:textSize="18sp"
            app:fontFamily="@font/orbitron_black" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/facilRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/branco"
                android:fontFamily="@font/orbitron_black"
                android:text="@string/f_cil"
                android:textColor="@color/branco" />

            <RadioButton
                android:id="@+id/normalRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/branco"
                android:fontFamily="@font/orbitron_black"
                android:text="@string/normal"
                android:textColor="@color/branco" />

            <RadioButton
                android:id="@+id/dificilRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/branco"
                android:fontFamily="@font/orbitron_black"
                android:text="@string/dif_cil"
                android:textColor="@color/branco" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/saveBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Salvar"
        android:fontFamily="@font/orbitron_black"
        android:textColor="@color/colorBackground"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>