<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageTetris"
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:layout_gravity="top"
        android:src="@drawable/tetrisname" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:id="@+id/newGameBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_background"
            android:fontFamily="@font/orbitron_black"
            android:text="@string/novo_jogo"
            android:textColor="@color/branco"
            android:textSize="24sp" />

        <Button
            android:id="@+id/continuaBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_background"
            android:fontFamily="@font/orbitron_black"
            android:text="@string/continuar"
            android:textColor="@color/branco"
            android:textSize="24sp" />

        <Button
            android:id="@+id/confBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_background"
            android:fontFamily="@font/orbitron_black"
            android:text="@string/configurar"
            android:textColor="@color/branco"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageTetris2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:src="@drawable/tetris2" />

</LinearLayout>