<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="412dp"
        android:layout_height="198dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/Tetris-3d_Easy-Resize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/newGameBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bt_background"
            android:fontFamily="@font/orbitron_black"
            android:text="@string/novo_jogo"
            android:textColor="#ffff"
            android:textSize="32sp" />

        <Button
            android:id="@+id/continuaBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bt_background"
            android:fontFamily="@font/orbitron_black"
            android:text="@string/continuar"
            android:textColor="#ffff"
            android:textSize="32sp" />

        <Button
            android:id="@+id/confBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="108dp"
            android:background="@drawable/bt_background"
            android:fontFamily="@font/orbitron_black"
            android:text="@string/configurar"
            android:textColor="#ffff"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tetris2" />
    </LinearLayout>

</LinearLayout>